DatePicker: sizes, fix format, change styling

--- a/examples/BlazorWasmExamples/wwwroot/index.html
+++ b/examples/BlazorWasmExamples/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,6 +7,10 @@
     <title>BlazorWasmExamples</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <!--<link href="_content/BBComponents/styles.css" rel="stylesheet" />-->
+    <!-- Overcome error with static content from RCL -->
+    <link href="css/bb-components.css" rel="stylesheet" />
+    <link href="lib/font-awesome/css/all.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 
