Fixed problem with styles reference from RCL

--- a/examples/BlazorWasmExamples/wwwroot/index.html
+++ b/examples/BlazorWasmExamples/wwwroot/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width" />
     <title>BlazorWasmExamples</title>
     <base href="/" />
+    <!-- Bootstrap styles -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <!--<link href="_content/BBComponents/styles.css" rel="stylesheet" />-->
-    <!-- Overcome error with static content from RCL -->
-    <link href="css/bb-components.css" rel="stylesheet" />
+    <!-- Fontawesome -->
     <link href="lib/font-awesome/css/all.css" rel="stylesheet" />
+    <!-- BBComponents styles -->
+    <link href="/_content/ZyuDev.BBComponents/styles.css" rel="stylesheet" />
+    <!-- App styles -->
     <link href="css/site.css" rel="stylesheet" />
+
+
 </head>
 
 <body>
