--- a/examples/BlazorWasmExamples/wwwroot/index.html
+++ b/examples/BlazorWasmExamples/wwwroot/index.html
@@ -11,7 +11,7 @@
     <!-- Fontawesome -->
     <link href="lib/font-awesome/css/all.css" rel="stylesheet" />
     <!-- BBComponents styles -->
-    <link href="/_content/ZyuDev.BBComponents/styles.css" rel="stylesheet" />
+    <link href="/_content/HubCloud.BBComponents/styles.css" rel="stylesheet" />
     <!-- App styles -->
     <link href="css/site.css" rel="stylesheet" />
 
