Code examples for number input

--- a/examples/BlazorWasmExamples/wwwroot/index.html
+++ b/examples/BlazorWasmExamples/wwwroot/index.html
@@ -12,13 +12,17 @@
     <link href="lib/font-awesome/css/all.css" rel="stylesheet" />
     <!-- BBComponents styles -->
     <link href="/_content/HubCloud.BBComponents/styles.css" rel="stylesheet" />
+    <link href="rainbow/themes/github.css" rel="stylesheet" />
     <!-- App styles -->
     <link href="css/site.css" rel="stylesheet" />
 
+    <script src="rainbow/js/rainbow.js"></script>
+    <script src="rainbow/js/language/html.js"></script>
+    <script src="rainbow/js/language/csharp.js"></script>
 
 </head>
 
-<body>
+<body >
     <app>Loading...</app>
 
     <div id="blazor-error-ui">
